testdata/baselines/reference/submodule/conformance/callbackTag3.errors.txt
cb.js(4,12): error TS2304: Cannot find name 'Miracle'.


==== cb.js (1 errors) ====
    /** @callback Miracle
     * @returns {string} What were you expecting
     */
    /** @type {Miracle} smallId */
               ~~~~~~~
!!! error TS2304: Cannot find name 'Miracle'.
    var sid = () => "!";
    
    